# lives

./: README.md
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_new.md  Makefile  QUICKSTART.md  README.md  conftest.py  docker-compose.yml  init-db.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_21_1440-ac8963c30d6c_initial_migration_with_users_table.py
backend/app/: auth.py  config.py  database.py  main.py  schemas.py
backend/app/users/: models.py  router.py  schemas.py  service.py
backend/app/users/tests/: conftest.py  factories.py  test_users.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: conftest.py  test_api.py  test_models.py  test_serializers.py
backend/config/: settings.py  urls.py
backend/tests/: conftest.py  test_main.py
lives/: README.md  next.config.ts  package-lock.json  package.json
lives/.github/: copilot-instructions.md
lives/src/app/: globals.css  layout.tsx
lives/src/components/: FeatureDescription.tsx  LandingPage.tsx  SignUpSection.tsx  landing-page.css
lives/src/utils/: assets.ts
