[project]
name = "backend"
version = "0.1.0"
description = "Django backend with PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "django-environ>=0.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-django>=4.7.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests", "apps"]
pythonpath = ["."]
addopts = "-v --tb=short --reuse-db"

[tool.coverage.run]
source = ["apps", "config"]
omit = ["tests/*", "**/__pycache__/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
